{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 1497,
  "lineage": "55eec127-5e2c-9280-1a5a-4d9cebe74175",
  "resources": [
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attach_VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-066efe2d280821255",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0575bc367086d70fa",
              "subnet-091a19830aae17ad9"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07e413986f638762d",
            "vpc_id": "vpc-0c4cc081bfe6bcb88",
            "vpc_owner_id": "999841755538"
          },
          "dependencies": [
            "module.VPCA.aws_subnet.private_data_subnet_az1",
            "module.VPCA.aws_subnet.private_data_subnet_az2",
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC1_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:999841755538:instance/i-0339450c450232c15",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0339450c450232c15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vinhkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afc84e1eae2c6ece",
            "private_dns": "ip-10-20-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0353de752894b58a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0575bc367086d70fa",
            "tags": {
              "Name": "VPC1_Web_Server_1"
            },
            "tags_all": {
              "Name": "VPC1_Web_Server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02405513053dbbe08"
            ]
          },
          "dependencies": [
            "module.VPCA.aws_security_group.VPC1_web_sg",
            "module.VPCA.aws_subnet.private_data_subnet_az1",
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_edge_tgw_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05783c1d842bb33311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05783c1d842bb3331",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-07e413986f638762d",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCA.aws_route_table.VPC1_prv_rt",
            "module.VPCA.aws_vpc.vpc1",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05783c1d842bb33311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05783c1d842bb3331",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-07e413986f638762d",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCA.aws_route_table.VPC1_prv_rt",
            "module.VPCA.aws_vpc.vpc1",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC1_prv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:route-table/rtb-05783c1d842bb3331",
            "id": "rtb-05783c1d842bb3331",
            "owner_id": "999841755538",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC1_prv_rt"
            },
            "tags_all": {
              "Name": "VPC1_prv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4cc081bfe6bcb88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCA.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PC1_prv_sub_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a68cf7f9a86a174e",
            "route_table_id": "rtb-05783c1d842bb3331",
            "subnet_id": "subnet-091a19830aae17ad9"
          },
          "dependencies": [
            "module.VPCA.aws_route_table.VPC1_prv_rt",
            "module.VPCA.aws_subnet.private_data_subnet_az2",
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC1_prv_sub_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae9b4ab0571dadef",
            "route_table_id": "rtb-05783c1d842bb3331",
            "subnet_id": "subnet-0575bc367086d70fa"
          },
          "dependencies": [
            "module.VPCA.aws_route_table.VPC1_prv_rt",
            "module.VPCA.aws_subnet.private_data_subnet_az1",
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC1_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:security-group/sg-02405513053dbbe08",
            "description": "VPC1_web_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02405513053dbbe08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "VPC1_web_sg",
            "name_prefix": "",
            "owner_id": "999841755538",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c4cc081bfe6bcb88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCA.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:subnet/subnet-0575bc367086d70fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0575bc367086d70fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "999841755538",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet1 vpc1"
            },
            "tags_all": {
              "Name": "private subnet1 vpc1"
            },
            "vpc_id": "vpc-0c4cc081bfe6bcb88"
          },
          "dependencies": [
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:subnet/subnet-091a19830aae17ad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091a19830aae17ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "999841755538",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet2 vpc1"
            },
            "tags_all": {
              "Name": "private subnet2 vpc1"
            },
            "vpc_id": "vpc-0c4cc081bfe6bcb88"
          },
          "dependencies": [
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCA",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:vpc/vpc-0c4cc081bfe6bcb88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-052eddbd6791769a6",
            "default_route_table_id": "rtb-06a5a01965fc48448",
            "default_security_group_id": "sg-0612d2c8a7fb2df05",
            "dhcp_options_id": "dopt-078447ebb5da02506",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4cc081bfe6bcb88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a5a01965fc48448",
            "owner_id": "999841755538",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attach_VPC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0c8b8374eb074b538",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0978ef8c5ad65e219",
              "subnet-0b1113c51f1019dd3"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07e413986f638762d",
            "vpc_id": "vpc-07956bc0e25faf5f8",
            "vpc_owner_id": "999841755538"
          },
          "dependencies": [
            "module.VPCB.aws_subnet.private_data_subnet_az1",
            "module.VPCB.aws_subnet.private_data_subnet_az2",
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_instance",
      "name": "VPC2_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:999841755538:instance/i-0b4357480559e0dc3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4357480559e0dc3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vinhkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05829bd5244bad733",
            "private_dns": "ip-10-10-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0346bf09bd32cee0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1113c51f1019dd3",
            "tags": {
              "Name": "VPC2_Web_Server_1"
            },
            "tags_all": {
              "Name": "VPC2_Web_Server_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bd9cacfec33a92ec"
            ]
          },
          "dependencies": [
            "module.VPCB.aws_security_group.VPC2_web_sg",
            "module.VPCB.aws_subnet.private_data_subnet_az1",
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03390bda00634eb351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03390bda00634eb35",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-07e413986f638762d",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCB.aws_route_table.VPC2_prv_rt",
            "module.VPCB.aws_vpc.vpc2",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2_tgw_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03390bda00634eb353901788224",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03390bda00634eb35",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-07e413986f638762d",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCB.aws_route_table.VPC2_prv_rt",
            "module.VPCB.aws_vpc.vpc2",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "VPC2_prv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:route-table/rtb-03390bda00634eb35",
            "id": "rtb-03390bda00634eb35",
            "owner_id": "999841755538",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC2_prv_rt"
            },
            "tags_all": {
              "Name": "VPC2_prv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07956bc0e25faf5f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCB.aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC2_prv_sub_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03097ff345d9146b9",
            "route_table_id": "rtb-03390bda00634eb35",
            "subnet_id": "subnet-0b1113c51f1019dd3"
          },
          "dependencies": [
            "module.VPCB.aws_route_table.VPC2_prv_rt",
            "module.VPCB.aws_subnet.private_data_subnet_az1",
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "VPC2_prv_sub_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0877df775e7cfc933",
            "route_table_id": "rtb-03390bda00634eb35",
            "subnet_id": "subnet-0978ef8c5ad65e219"
          },
          "dependencies": [
            "module.VPCB.aws_route_table.VPC2_prv_rt",
            "module.VPCB.aws_subnet.private_data_subnet_az2",
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC2_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:security-group/sg-0bd9cacfec33a92ec",
            "description": "VPC2_web_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd9cacfec33a92ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "VPC2_web_sg",
            "name_prefix": "",
            "owner_id": "999841755538",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07956bc0e25faf5f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCB.aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:subnet/subnet-0b1113c51f1019dd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1113c51f1019dd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "999841755538",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet1"
            },
            "tags_all": {
              "Name": "private subnet1"
            },
            "vpc_id": "vpc-07956bc0e25faf5f8"
          },
          "dependencies": [
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:subnet/subnet-0978ef8c5ad65e219",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0978ef8c5ad65e219",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "999841755538",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet2"
            },
            "tags_all": {
              "Name": "public subnet2"
            },
            "vpc_id": "vpc-07956bc0e25faf5f8"
          },
          "dependencies": [
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPCB",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:vpc/vpc-07956bc0e25faf5f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0aa0d2a86f8eb2c3b",
            "default_route_table_id": "rtb-03b037192f1421c40",
            "default_security_group_id": "sg-047fbfd4a6ba490b6",
            "dhcp_options_id": "dopt-078447ebb5da02506",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07956bc0e25faf5f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b037192f1421c40",
            "owner_id": "999841755538",
            "tags": {
              "Name": "$vpc2"
            },
            "tags_all": {
              "Name": "$vpc2"
            }
          }
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attach_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0ad32bc53bb64841a",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-00d03831a736f37e1",
              "subnet-0e51f0dfe8f077d92"
            ],
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07e413986f638762d",
            "vpc_id": "vpc-032cd1d0028eb57e6",
            "vpc_owner_id": "999841755538"
          },
          "dependencies": [
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_subnet.edge_internal_subnet_1a",
            "module.VPCC.aws_vpc.vpc3",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0baef0f4cc8be0279",
            "domain": "vpc",
            "id": "eipalloc-0baef0f4cc8be0279",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-23-29-120.compute-1.amazonaws.com",
            "public_ip": "23.23.29.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc_edge_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa7d40eeae50c9a9",
            "arn": "arn:aws:ec2:us-east-1:999841755538:instance/i-0975c189743c11d60",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0975c189743c11d60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vinhkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb273938d78543be",
            "private_dns": "ip-192-168-1-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.25",
            "public_ip": "44.210.117.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05d1478336bf16d88",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d03831a736f37e1",
            "tags": {
              "Name": "vpc_edge_NAT_Instance"
            },
            "tags_all": {
              "Name": "vpc_edge_NAT_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0430ca34a2f2070e3"
            ]
          },
          "dependencies": [
            "module.VPCC.aws_security_group.edge_vpc_permissive_sg",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edge_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:internet-gateway/igw-0ffc7a04dc654b582",
            "id": "igw-0ffc7a04dc654b582",
            "owner_id": "999841755538",
            "vpc_id": "vpc-032cd1d0028eb57e6"
          },
          "dependencies": [
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0baef0f4cc8be0279",
            "connectivity_type": "public",
            "id": "nat-0634e6020cf401367",
            "network_interface_id": "eni-02710aae37ee5487c",
            "private_ip": "192.168.1.94",
            "public_ip": "23.23.29.120",
            "subnet_id": "subnet-00d03831a736f37e1"
          },
          "dependencies": [
            "module.VPCC.aws_eip.NAT_EIP",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edge_internal_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:route-table/rtb-0f0b48bf1b4735968",
            "id": "rtb-0f0b48bf1b4735968",
            "owner_id": "999841755538",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0634e6020cf401367",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT_ROUTE"
            },
            "tags_all": {
              "Name": "NAT_ROUTE"
            },
            "timeouts": null,
            "vpc_id": "vpc-032cd1d0028eb57e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCC.aws_eip.NAT_EIP",
            "module.VPCC.aws_nat_gateway.NATGW",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edge_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:route-table/rtb-0991ac6720eefa797",
            "id": "rtb-0991ac6720eefa797",
            "owner_id": "999841755538",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffc7a04dc654b582",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07e413986f638762d",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.20.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-07e413986f638762d",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Edge_VPC_Public_Route_Table"
            },
            "tags_all": {
              "Name": "Edge_VPC_Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-032cd1d0028eb57e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCC.aws_internet_gateway.edge_vpc_igw",
            "module.VPCC.aws_vpc.vpc3",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_internal_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077a0e8d2efbda24d",
            "route_table_id": "rtb-0f0b48bf1b4735968",
            "subnet_id": "subnet-0e51f0dfe8f077d92"
          },
          "dependencies": [
            "module.VPCC.aws_eip.NAT_EIP",
            "module.VPCC.aws_nat_gateway.NATGW",
            "module.VPCC.aws_route_table.edge_internal_rt",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_subnet.edge_internal_subnet_1a",
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc3_rt_associatio_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dd78d7192f86e4b",
            "route_table_id": "rtb-0991ac6720eefa797",
            "subnet_id": "subnet-00d03831a736f37e1"
          },
          "dependencies": [
            "module.VPCC.aws_internet_gateway.edge_vpc_igw",
            "module.VPCC.aws_route_table.edge_pub_rt",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_vpc.vpc3",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edge_vpc_permissive_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:security-group/sg-0430ca34a2f2070e3",
            "description": "edge_vpc_permissive_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0430ca34a2f2070e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "edge_vpc_permissive_sg",
            "name_prefix": "",
            "owner_id": "999841755538",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-032cd1d0028eb57e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edge_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:security-group/sg-08cf6f9b889bf9081",
            "description": "edge_web_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cf6f9b889bf9081",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0430ca34a2f2070e3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "edge_web_sg",
            "name_prefix": "",
            "owner_id": "999841755538",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-032cd1d0028eb57e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCC.aws_security_group.edge_vpc_permissive_sg",
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edge_external_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:subnet/subnet-00d03831a736f37e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d03831a736f37e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "999841755538",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC3_public_subnet_1a_ex"
            },
            "tags_all": {
              "Name": "VPC3_public_subnet_1a_ex"
            },
            "vpc_id": "vpc-032cd1d0028eb57e6"
          },
          "dependencies": [
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edge_internal_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:subnet/subnet-0e51f0dfe8f077d92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e51f0dfe8f077d92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "999841755538",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC3_private_Subnet_1b_internal"
            },
            "tags_all": {
              "Name": "VPC3_private_Subnet_1b_internal"
            },
            "vpc_id": "vpc-032cd1d0028eb57e6"
          },
          "dependencies": [
            "module.VPCC.aws_vpc.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.VPCC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:vpc/vpc-032cd1d0028eb57e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e374e79769a50c1c",
            "default_route_table_id": "rtb-0f7735c37b7dda431",
            "default_security_group_id": "sg-0ab0fc3fd6f8843ed",
            "dhcp_options_id": "dopt-078447ebb5da02506",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032cd1d0028eb57e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7735c37b7dda431",
            "owner_id": "999841755538",
            "tags": {
              "Name": "vpc_trunggian"
            },
            "tags_all": {
              "Name": "vpc_trunggian"
            }
          }
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "demo_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:999841755538:transit-gateway/tgw-07e413986f638762d",
            "association_default_route_table_id": "tgw-rtb-05eb2955a1da3ee10",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "demo_tgw",
            "dns_support": "enable",
            "id": "tgw-07e413986f638762d",
            "multicast_support": "disable",
            "owner_id": "999841755538",
            "propagation_default_route_table_id": "tgw-rtb-05eb2955a1da3ee10",
            "tags": {
              "Name": "Transit_Gateway"
            },
            "tags_all": {
              "Name": "Transit_Gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_VPA_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.20.0.0/16",
            "id": "tgw-rtb-03385c14adf452371_10.20.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-066efe2d280821255",
            "transit_gateway_route_table_id": "tgw-rtb-03385c14adf452371"
          },
          "dependencies": [
            "module.VPCA.aws_ec2_transit_gateway_vpc_attachment.tgw_attach_VPC1",
            "module.VPCA.aws_subnet.private_data_subnet_az1",
            "module.VPCA.aws_subnet.private_data_subnet_az2",
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw",
            "module.transitGW.aws_ec2_transit_gateway_route_table.TGW_VPC_A_to_B_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_VPB_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.10.0.0/16",
            "id": "tgw-rtb-03385c14adf452371_10.10.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0c8b8374eb074b538",
            "transit_gateway_route_table_id": "tgw-rtb-03385c14adf452371"
          },
          "dependencies": [
            "module.VPCB.aws_ec2_transit_gateway_vpc_attachment.tgw_attach_VPC2",
            "module.VPCB.aws_subnet.private_data_subnet_az1",
            "module.VPCB.aws_subnet.private_data_subnet_az2",
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw",
            "module.transitGW.aws_ec2_transit_gateway_route_table.TGW_VPC_A_to_B_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0ab9455f22e5b3278_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-0ad32bc53bb64841a",
            "transit_gateway_route_table_id": "tgw-rtb-0ab9455f22e5b3278"
          },
          "dependencies": [
            "module.VPCC.aws_ec2_transit_gateway_vpc_attachment.tgw_attach_edge",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_subnet.edge_internal_subnet_1a",
            "module.VPCC.aws_vpc.vpc3",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw",
            "module.transitGW.aws_ec2_transit_gateway_route_table.ASSOCIATION_DEFAULT_ROUTE_TABLE"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "tgw_spoke_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-092c430bde201975d_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-0ad32bc53bb64841a",
            "transit_gateway_route_table_id": "tgw-rtb-092c430bde201975d"
          },
          "dependencies": [
            "module.VPCC.aws_ec2_transit_gateway_vpc_attachment.tgw_attach_edge",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_subnet.edge_internal_subnet_1a",
            "module.VPCC.aws_vpc.vpc3",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw",
            "module.transitGW.aws_ec2_transit_gateway_route_table.TGW_spoke_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "ASSOCIATION_DEFAULT_ROUTE_TABLE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:transit-gateway-route-table/tgw-rtb-0ab9455f22e5b3278",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0ab9455f22e5b3278",
            "transit_gateway_id": "tgw-07e413986f638762d"
          },
          "dependencies": [
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "TGW_VPC_A_to_B_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:transit-gateway-route-table/tgw-rtb-03385c14adf452371",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-03385c14adf452371",
            "transit_gateway_id": "tgw-07e413986f638762d"
          },
          "dependencies": [
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "TGW_spoke_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999841755538:transit-gateway-route-table/tgw-rtb-092c430bde201975d",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-092c430bde201975d",
            "transit_gateway_id": "tgw-07e413986f638762d"
          },
          "dependencies": [
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-092c430bde201975d_tgw-attach-066efe2d280821255",
            "resource_id": "vpc-0c4cc081bfe6bcb88",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-066efe2d280821255",
            "transit_gateway_route_table_id": "tgw-rtb-092c430bde201975d"
          },
          "dependencies": [
            "module.VPCA.aws_ec2_transit_gateway_vpc_attachment.tgw_attach_VPC1",
            "module.VPCA.aws_subnet.private_data_subnet_az1",
            "module.VPCA.aws_subnet.private_data_subnet_az2",
            "module.VPCA.aws_vpc.vpc1",
            "module.VPCA.data.aws_availability_zones.available_zones",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw",
            "module.transitGW.aws_ec2_transit_gateway_route_table.TGW_spoke_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-092c430bde201975d_tgw-attach-0c8b8374eb074b538",
            "resource_id": "vpc-07956bc0e25faf5f8",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0c8b8374eb074b538",
            "transit_gateway_route_table_id": "tgw-rtb-092c430bde201975d"
          },
          "dependencies": [
            "module.VPCB.aws_ec2_transit_gateway_vpc_attachment.tgw_attach_VPC2",
            "module.VPCB.aws_subnet.private_data_subnet_az1",
            "module.VPCB.aws_subnet.private_data_subnet_az2",
            "module.VPCB.aws_vpc.vpc2",
            "module.VPCB.data.aws_availability_zones.available_zones",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw",
            "module.transitGW.aws_ec2_transit_gateway_route_table.TGW_spoke_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.transitGW",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpcC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-03385c14adf452371_tgw-attach-0ad32bc53bb64841a",
            "resource_id": "vpc-032cd1d0028eb57e6",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0ad32bc53bb64841a",
            "transit_gateway_route_table_id": "tgw-rtb-03385c14adf452371"
          },
          "dependencies": [
            "module.VPCC.aws_ec2_transit_gateway_vpc_attachment.tgw_attach_edge",
            "module.VPCC.aws_subnet.edge_external_subnet_1a",
            "module.VPCC.aws_subnet.edge_internal_subnet_1a",
            "module.VPCC.aws_vpc.vpc3",
            "module.transitGW.aws_ec2_transit_gateway.demo_tgw",
            "module.transitGW.aws_ec2_transit_gateway_route_table.TGW_VPC_A_to_B_route_table"
          ]
        }
      ]
    }
  ]
}